<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_account">

    <fragment
        android:id="@+id/navigation_account"
        android:name="cu.marilasoft.asrcubacel.ui.account.AccountFragment"
        android:label="@string/title_account"
        tools:layout="@layout/fragment_account" />

    <fragment
        android:id="@+id/navigation_data"
        android:name="cu.marilasoft.asrcubacel.ui.data.DataFragment"
        android:label="@string/title_data"
        tools:layout="@layout/fragment_data" />

    <fragment
        android:id="@+id/navigation_store"
        android:name="cu.marilasoft.asrcubacel.ui.store.StoreFragment"
        android:label="@string/title_store"
        tools:layout="@layout/fragment_store" />
</navigation>