<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.signUp.SignUpStepOneFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="8dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tv_sign_in_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="16dp"
                    android:text="Registrese con su numero de telefono"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@id/et_phone_number"
                    android:layout_alignTop="@id/et_phone_number"
                    android:layout_alignBottom="@id/et_phone_number"
                    android:paddingLeft="10dp"
                    android:paddingTop="5dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="5dp"
                    android:text="@string/_53"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/et_phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_sign_in_info"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/rounded_edit_text"
                    android:ems="10"
                    android:hint="@string/hint_phone_number"
                    android:inputType="phone"
                    android:paddingLeft="45dp"
                    android:paddingTop="5dp"
                    android:paddingRight="45dp"
                    android:paddingBottom="5dp" />

                <ImageView
                    android:id="@+id/imageView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@id/et_first_name"
                    android:layout_alignTop="@id/et_first_name"
                    android:layout_alignBottom="@id/et_first_name"
                    android:paddingLeft="10dp"
                    android:paddingTop="5dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="5dp"
                    app:srcCompat="@drawable/ic_person_black_24dp" />

                <EditText
                    android:id="@+id/et_first_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/et_phone_number"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/rounded_edit_text"
                    android:ems="10"
                    android:hint="@string/first_name"
                    android:inputType="textPersonName"
                    android:paddingLeft="45dp"
                    android:paddingTop="5dp"
                    android:paddingRight="45dp"
                    android:paddingBottom="5dp" />

                <ImageView
                    android:id="@+id/imageView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@id/et_last_name"
                    android:layout_alignTop="@id/et_last_name"
                    android:layout_alignBottom="@id/et_last_name"
                    android:paddingLeft="10dp"
                    android:paddingTop="5dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="5dp"
                    app:srcCompat="@drawable/ic_person_black_24dp" />

                <EditText
                    android:id="@+id/et_last_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/et_first_name"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/rounded_edit_text"
                    android:ems="10"
                    android:hint="@string/last_name"
                    android:inputType="textPersonName"
                    android:paddingLeft="45dp"
                    android:paddingTop="5dp"
                    android:paddingRight="45dp"
                    android:paddingBottom="5dp" />

                <ImageView
                    android:id="@+id/imageView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@id/et_email_address"
                    android:layout_alignTop="@id/et_email_address"
                    android:layout_alignBottom="@id/et_email_address"
                    android:paddingLeft="10dp"
                    android:paddingTop="5dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="5dp"
                    app:srcCompat="@drawable/ic_email_black_24dp" />

                <EditText
                    android:id="@+id/et_email_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/et_last_name"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/rounded_edit_text"
                    android:ems="10"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="45dp"
                    android:paddingTop="5dp"
                    android:paddingRight="45dp"
                    android:paddingBottom="5dp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/et_email_address"
                    android:gravity="center">

                    <ImageButton
                        android:id="@+id/ib_continue"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginBottom="16dp"
                        android:background="@drawable/rounded_button_buy"
                        app:srcCompat="@drawable/ic_arrow_forward_black_24dp" />
                </RelativeLayout>

            </RelativeLayout>
        </androidx.cardview.widget.CardView>

    </RelativeLayout>
</FrameLayout>