<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="8dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tv_login_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="16dp"
                    android:gravity="center"
                    android:text="@string/sign_in_with_cubacel_account"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_country_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@id/et_phone_number"
                    android:layout_alignTop="@id/et_phone_number"
                    android:layout_alignBottom="@id/et_phone_number"
                    android:paddingLeft="10dp"
                    android:paddingTop="5dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="5dp"
                    android:text="@string/_53"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/et_phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_login_info"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/rounded_edit_text"
                    android:ems="10"
                    android:inputType="phone"
                    android:paddingLeft="45dp"
                    android:paddingTop="5dp"
                    android:paddingRight="45dp"
                    android:paddingBottom="5dp" />

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@id/et_password"
                    android:layout_alignTop="@id/et_password"
                    android:layout_alignBottom="@id/et_password"
                    android:paddingLeft="10dp"
                    android:paddingTop="5dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="5dp"
                    app:srcCompat="@drawable/ic_lock_outline_black_24dp" />

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/et_phone_number"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/rounded_edit_text"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:paddingLeft="35dp"
                    android:paddingTop="5dp"
                    android:paddingRight="35dp"
                    android:paddingBottom="5dp" />

                <ImageButton
                    android:id="@+id/imageButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@id/et_password"
                    android:layout_alignRight="@id/et_password"
                    android:layout_alignBottom="@id/et_password"
                    android:background="#00000000"
                    android:paddingLeft="10dp"
                    android:paddingTop="5dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="5dp"
                    app:srcCompat="@drawable/ic_visibility_black_24dp" />

                <TextView
                    android:id="@+id/tv_forgot_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/et_password"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/forgot_your_password"
                    android:textColor="@color/colorAccent" />

                <RelativeLayout
                    android:id="@+id/btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_forgot_password"
                    android:gravity="center">

                    <ImageButton
                        android:id="@+id/ib_enter"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:background="@drawable/rounded_button_buy"
                        app:srcCompat="@drawable/ic_arrow_forward_black_24dp" />
                </RelativeLayout>

                <TextView
                    android:id="@+id/tv_sign_up"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/btn"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="24dp"
                    android:gravity="center"
                    android:text="@string/sign_up_with_your_phone_number"
                    android:textColor="@color/colorAccent" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>
</FrameLayout>